# mag_daq

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/libiio/: CMakeLists.txt
lib/libxml2/: libxml2.la
src/: CMakeLists.txt  CmakeLists.txt  ad7616_libiio.c
